--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
@@ -27,7 +27,7 @@
     </UserControl.Resources>
 
     <!--Main content-->
-    <Grid>
+    <Grid Background="#20000000">
         <SemanticZoom Style="{StaticResource SemanticZoomCustomStyle}">
             <SemanticZoom.ZoomedInView>
 
