--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -57,4 +57,13 @@
         Tint="#FF1E1E1E"
         TintMix="0.6"
         NoiseTextureUri="/Assets/Misc/noise.png"/>
+    
+    <!--Popup brush-->
+    <brushes:CustomAcrylicBrush
+        x:Key="PopupInAppAcrylicBrush"
+        Mode="InAppBlur"
+        BlurAmount="8"
+        Tint="#FF1B1B1B"
+        TintMix="0.8"
+        NoiseTextureUri="/Assets/Misc/noise.png"/>
 </ResourceDictionary>
