--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -198,7 +198,9 @@
     </UserControl.Resources>
 
     <!--Root-->
-    <Grid Background="#FF1E1E1E">
+    <Grid 
+        x:Name="RootGrid"
+        Background="#FF1E1E1E">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="28"/>
